--- a/deploy/crs/kieapp_production.yaml
+++ b/deploy/crs/kieapp_production.yaml
@@ -5,12 +5,4 @@ metadata:
 spec:
   environment: production
   kieDeployments: 2
-  objects:
-    console:
-      resources:
-        limits:
-          memory: 2Gi
-    server:
-      env:
-        - name: key1
-          value: value1
+  consoleType: "Monitoring"
